--- a/2016/templates/python_solution.template
+++ b/2016/templates/python_solution.template
@@ -1,15 +1,17 @@
 #!/usr/bin/env python
 """Docstring."""
 
-from common import (
-    get_input,
-)
+from common import get_input
 
 
-def main():
-    """Docstring."""
-    puzzle_input = get_input()
+class ClassName:
+    """."""
+
+    def __init__(self):
+        """Initialize."""
+        pass
 
 
 if __name__ == "__main__":
-    main()
+    thing = ClassName(get_input)
+    print thing.method()
