Day 6, Parts 1 and 2

--- a/2016/templates/python_solution.template
+++ b/2016/templates/python_solution.template
@@ -14,4 +14,4 @@ class ClassName:
 
 if __name__ == "__main__":
     thing = ClassName(get_input)
-    print thing.method()
+    print(thing.method())
